k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-management-ingress
  annotations:
    # If you use cert-manager later, add SSL annotations here
spec:
  rules:
    - host: groupsix.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
